# Proyecto-Final-

./: Codigo.PY  Comparador_PDF_FINAL.py  Main.PY  README.md  codigo.py  comparador_de_pdf.py.  funciones.py  pyproject.toml  uno.txt
